--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,6 +89,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="RotateRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="RotateRight",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="RotateTurretRight",Scale=1.000000,Key=Gamepad_RightX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
